# LuminaDeck

./: .env.example  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/companion/: package.json
apps/companion/msix-staging/: AppxManifest.xml
apps/companion/src/: index.html
apps/companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion/src-tauri/capabilities/: main.json
apps/companion/src-tauri/src/: discovery.rs  lib.rs  main.rs  server.rs  window_monitor.rs
apps/companion/src-tauri/src/actions/: app_launch.rs  keybind.rs  mod.rs  system.rs  text_input.rs
apps/companion/src-tauri/src/plugins/: discord.rs  mod.rs  obs.rs
apps/companion/src-tauri/src/security/: mod.rs  pairing.rs  session.rs  tls.rs
apps/mobile/: App.tsx  app.json  eas.json  package.json
apps/mobile/src/components/: ButtonCell.tsx  ButtonGrid.tsx  ColorPicker.tsx  ConnectionStatus.tsx  FolderView.tsx  GifPicker.tsx  IconView.tsx  QRScannerModal.tsx
apps/mobile/src/contexts/: ConnectionContext.tsx  ProContext.tsx  ProfileContext.tsx  ThemeContext.tsx
apps/mobile/src/lib/: discovery.ts  iap.ts  icons.ts  pro.ts  (+6 more)
docs/: APP-STORE-REVIEW-NOTES.md  FULL-BUILD-OPERATOR.md  GOOGLE-PLAY-GUIDE.md  LUMINADECK-LAUNCH-PLAN.md  MICROSOFT-STORE-GUIDE.md  PRIVACY-POLICY.md  SETUP-CHECKLIST.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: generate-icons.js  test-protocol.js  test-ws-connection.js
supabase/functions/luminadeck-validate-receipt/: index.ts
supabase/migrations/: 001_luminadeck_schema.sql
(+12 files in other folders)
