[package]
name = "luminadeck-companion"
version = "0.1.0"
edition = "2021"
description = "LuminaDeck Windows Companion - receives commands from iPhone over local WiFi"
authors = ["LuminaDeck"]

[lib]
name = "luminadeck_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
totp-rs = { version = "5", features = ["gen_secret"] }
mdns-sd = "0.11"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
parking_lot = "0.12"
directories = "5"
base64 = "0.22"
hostname = "0.4"
futures-util = "0.3"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Security_Cryptography",
  "Win32_System_Power",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_Foundation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
